# RobotArm2_Take_Mahjong

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
lib/CMD/: CMD.cpp  CMD.h
lib/Hsv_setting/: armHsv_bg.ini  armHsv_greenBall.ini  topCamHsv_Gripper.ini  topHsv_greenBall.ini
test/: CMakeLists.txt  testMahjong.cpp
util/: util.cmake
util/ann_training/: .ann_training.cpp.swp  CMakeLists.txt  ann_training.cpp
